BUG 10910: Center the yAxis title properly.
QA: I'm only expecting two lines of text. It may start to look weird if there is
more than two lines of text.  Further, IE8 does not word-wrap the title. I've
decided not to fix that.

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -35,18 +35,17 @@
   .yLabelVert
     font-size: 1.4em
     font-weight: bold
-    left: -23.65em
+    left: -11.65em
     background: url(/stylesheets/images/content/70percentwhite.png)
-    margin-top: -4em
+    margin-top: -0.5em
     position: absolute
     @include prefixer(transform, rotate(-90deg))
     text-align: center
     top: 50%
-    width: 50em
 
     .ie8 &
       filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3, sizingMode='auto expand') progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/stylesheets/images/content/70percentwhite.png', sizingMethod='scale')
-      margin-left: 25em
+      margin-left: 13em
       margin-top: -24em
       background: transparent
 
